# english-coach

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  README.zh.md  docker-compose.yml  environment.yml  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  container.py  main.py
backend/app/adapters/: __init__.py  claude.py  llm.py  llm_factory.py  local.py  openai_compat.py  pronunciation.py  repository.py  speech.py  speech_factory.py  stt_faster_whisper.py  stt_openai_compat.py  tts_openai_compat.py  tts_piper.py
backend/app/agents/: __init__.py  base.py  error_analysis.py  examiner.py  leveling.py  memory_word.py  sentence_analysis.py  tokenizer_agent.py  topic_suggestion.py  tutor.py
backend/app/api/: __init__.py  auth.py  baseline.py  data.py  deps.py  practice.py  review.py  sentence.py  settings.py  today.py  vocab.py  voice.py
backend/app/db/: __init__.py  connection.py  schema.sql
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/nlp/: __init__.py  tokenizer.py
backend/app/scheduling/: __init__.py  fsrs_scheduler.py
backend/tests/: test_l0_scaffold.py  test_l1_adapters.py  test_l1_container.py  test_l1_local_repos.py  test_l2_scheduler.py  test_l2_tokenizer.py  test_l3_core_loop.py  test_l3_examiner.py  test_l3_manual_vocab.py  test_l3_practice_routes.py  test_l3_routes.py  test_l4_agents.py  test_l4_routes.py  test_l4_speech_adapters.py  test_l5_habit.py  test_sentence_analysis.py
docs/: 00-overview.md  01-product-spec.md  02-architecture.md  03-data-model.md  04-tech-stack.md  05-decisions.md  06-roadmap.md  07-implementation-order.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  ui.tsx  useRecorder.ts
frontend/src/panels/: PracticePanel.tsx  PracticeTopicInput.tsx  ReviewPanel.tsx  ScoreResult.tsx  SentencePanel.tsx  SettingsPanel.tsx  TodayPanel.tsx  VocabPanel.tsx  VoiceDialogue.tsx
