[project]
name = "english-coach-backend"
version = "0.0.1"
description = "理解式英语学习 Agent — 后端 (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # L1 LLM 适配器：OpenAICompatAdapter（覆盖 ~80% 模型）+ ClaudeAdapter（评分）。
    "anthropic>=0.40",
    "openai>=1.40",
]

# L2+ 才接入的重依赖（spaCy / faster-whisper / fsrs 等）
# 暂不写入，避免脚手架安装即拉满 ML 栈。按层逐步加入。
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",  # async Repo/适配器测试
    "httpx>=0.27",        # FastAPI TestClient 依赖
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# schema.sql 是运行期数据（Database 启动时读它建表），非 Python 模块。
# 不声明则 wheel/非 editable 安装里缺失，lifespan 启动即 FileNotFoundError。
[tool.setuptools.package-data]
"app.db" = ["*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# 刻意用 `str, Enum`（而非 py3.11 StrEnum）作可序列化枚举基类，全项目统一。
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
