[project]
name = "english-coach-backend"
version = "0.0.1"
description = "理解式英语学习 Agent — 后端 (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    # L1 LLM 适配器：OpenAICompatAdapter（覆盖 ~80% 模型）+ ClaudeAdapter（评分）。
    "anthropic>=0.40",
    "openai>=1.40",
    # L2 NLP/调度：spaCy 切词+lemma、wordfreq 词频过滤、fsrs 间隔重复调度。
    # spaCy 英文小模型 en_core_web_sm 不在 PyPI 依赖里，需另装：
    #   python -m spacy download en_core_web_sm
    "spacy>=3.7",
    "wordfreq>=3.0",
    # fsrs 6.x 专有 API：Scheduler(...) / Card(state=,step=,...) / get_card_retrievability。
    # 5.x 缺 get_card_retrievability 且 Card 形状不同，装上会在首次调度即崩——故下限锁 6.0。
    "fsrs>=6.0,<7",
]

# 语音（L4，ADR-012）。默认 STT/TTS 走 OpenAI 兼容协议，仅需已在主依赖的 openai SDK，
# 故云端/本地服务模式无需装本组。本组是**纯本地离线**适配器的重依赖：
#   - faster-whisper（本地 STT，拉 ctranslate2）
#   - piper-tts（本地 TTS，需另下载语音模型 .onnx）
# 适配器内懒加载（沿用 SpacyTokenizer/FsrsScheduler 风格），未装本组不影响其余功能与测试。
#   pip install -e ".[voice]"
[project.optional-dependencies]
voice = [
    "faster-whisper>=1.0",
    "piper-tts>=1.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",  # async Repo/适配器测试
    "httpx>=0.27",        # FastAPI TestClient 依赖
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# schema.sql 是运行期数据（Database 启动时读它建表），非 Python 模块。
# 不声明则 wheel/非 editable 安装里缺失，lifespan 启动即 FileNotFoundError。
[tool.setuptools.package-data]
"app.db" = ["*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# 刻意用 `str, Enum`（而非 py3.11 StrEnum）作可序列化枚举基类，全项目统一。
ignore = ["UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# 可选语音依赖（[voice]：faster-whisper / piper）无类型 stub，且默认不安装（适配器内懒导入）。
# 未装时 mypy 会报 import-not-found；这里忽略其缺失 stub，不影响主流程类型检查。
[[tool.mypy.overrides]]
module = ["faster_whisper", "faster_whisper.*", "piper", "piper.*"]
ignore_missing_imports = true
